--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "lab3",
   "version": "1.0.0",
   "description": "lab 3 web systems",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index.js"
+	"start": "node server.js"
   },
   
   "author": "Tsvetomir",
